--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -28,6 +28,13 @@
             {#<li><a href="#">One more separated link</a></li>#}
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans %} Task {% endtrans %} <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{{path('pa_task_index')}}">{% trans %} List Tasks {% endtrans %}</a></li>
+            <li><a href="{{path('pa_task_add')}}">{% trans %} New Task {% endtrans %}</a></li>
+          </ul>
+        </li>
       </ul>
       {#<form class="navbar-form navbar-left">#}
       {#  <div class="form-group">#}
