--- a/src/PA/UserBundle/Resources/views/Task/view.html.twig
+++ b/src/PA/UserBundle/Resources/views/Task/view.html.twig
@@ -24,9 +24,9 @@
 	            <dt>Estado</dt>
 	            <dd>
                 	{% if task.status == 0 %}
-                	    <span class="text-danger">Espera</span>
+                	    <span class="text-danger">En Espera</span>
                 	{% elseif task.status == 1 %}
-                	    <span class="text-success">Finalizado</span>
+                	    <span class="text-success">Finalizada</span>
                 	{% endif %}
 	                &nbsp;
 	            </dd>
@@ -47,6 +47,8 @@
 	            <br>
 	        </dl>
 	    </div>
+	    
+	    {% if is_granted('ROLE_ADMIN') %}
 	    <div class="col-md-3">
 	        <h3>Acciones:</h3>
 	        <p>
@@ -59,5 +61,6 @@
 	            {{ include('PAUserBundle:Task:forms/form.html.twig', { form: delete_form, message: 'Seguro desea eliminar ?' }) }}
 	        </p>
 	    </div>
+	    {%endif%}
 	</div>
 {% endblock %}
